# robot1

./: CMakeLists.txt  README.md
launch/: amr_robot_state_publisher.launch.py  amr_world.launch.py  amr_world_cafe.launch.py  amr_world_fabrica_launch.py  bringup_launch.py  gazebo_launch.py  navigation_launch.py  online_sync_launch.py  robot1.launch.py  spawn_amr.launch.py  spawn_amr_cafe.launch.py  spawn_waiter.launch.py  teste.launch.py  teste1.launch.py  verde.launch.py  verde2.launch.py  waiter_robot_state_publisher.launch.py
maps/: casa.pgm  casa.yaml  corredor.pgm  corredor.yaml  fab.pgm  fab.yaml  gab.pgm  gab.yaml  hall.pgm  hall.yaml  keepout.pgm  keepout.yaml  my_map.pgm  my_map.yaml  teste.pgm  teste.yaml  teste2.pgm  teste2.yaml  trico.pgm  trico.yaml
models/Depot/: model.sdf
models/amr/: model.config  model.sdf
models/cnc/: model.sdf
models/cnc2/: model.sdf
models/cnc3/: model.sdf
models/cnc4/: model.sdf
models/cnc5/: model.sdf
models/cnc6/: model.sdf
models/corredor/: model.config  model.sdf
params/: ekf.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  nav2_params2.yaml  nav2_params_straightline.yaml  nav2_params_sucatas.yaml  nav2_params_teste.yaml
resource/: machines.db  machines_esquema.sql
robot1/: cmd_pid.py  db.py  imagem41.py  imagem42.py  insert_data.py  machines.py  mapeamento.py  robot1_node.py  robot_navigator.py
rviz/: nav2_default_view.rviz
urdf/: amr.urdf  amr.xmacro  amr_base.urdf  amr_base.xacro  bot.gazebo  bot.urdf  bot.urdf.xacro  jetracer.urdf  jetracer.xacro  model.sdf  two_wheeled_robot_nav2.urdf.xacro  twr.urdf  verde.urdf  verde.xacro
worlds/: cafe.world  corredor.world  fabrica.world  hospital.world  trico.world  trico1 (copy).world  trico1.world
(+43 files in other folders)
